<resources>
    <string name="app_name" translatable="false">FouFouFood</string>
    <string name="welcome" translatable="true">Bienvenue sur FouFouFood</string>
    <string name="welcome_text" translatable="true">Commandez vos plats préférés et dégustez les à la maison !</string>

    <string name="back" translatable="true">Retour</string>
    <string name="logout_success" translatable="true">Déconnexion réussie</string>

    <string name="sign_in_with" translatable="true">se connecter avec</string>
    <string name="sign_up_with" translatable="true">s\'incrire avec</string>
    <string name="facebook" translatable="false">FACEBOOK</string>
    <string name="google" translatable="false">GOOGLE</string>
    <string name="start_email" translatable="true">Commencer avec son adresse mail</string>
    <string name="already_account" translatable="true">Déjà un compte ?</string>
    <string name="sign_in_underlined" translatable="true"><u>Se connecter</u></string>
    <string name="sign_in" translatable="true">Se connecter</string>

    <string name="sign_up" translatable="true">S\'inscrire</string>
    <string name="sign_up_underlined" translatable="true"><u>S\'inscrire</u></string>
    <string name="full_name" translatable="true">Nom complet</string>
    <string name="full_name_example" translatable="true">Votre nom complet</string>
    <string name="email" translatable="false">E-mail</string>
    <string name="email_example" translatable="false">Votre adresse e-mail</string>
    <string name="password" translatable="true">Mot de passe</string>
    <string name="password_example" translatable="true">Votre mot de passe</string>

    <string name="forgot_password" translatable="true">Mot de passe oublié ?</string>
    <string name="no_account" translatable="true">Pas encore de compte ?</string>

    <string name="verification_code" translatable="true">Code de vérification</string>
    <string name="verification_text" translatable="true">Un code de vérification a été envoyé à votre adresse mail</string>
    <string name="no_receive" translatable="true">Je n\'ai pas reçu de code !</string>
    <string name="resend" translatable="true">Renvoyer un code</string>
    <string name="verify" translatable="true">Vérifier</string>

    <string name="who_are_you" translatable="true">Qui êtes-vous ?</string>
    <string name="who_are_you_text" translatable="true">Veuillez entrer votre statut parmi les trois suivants</string>
    <string name="customer" translatable="true">Client</string>
    <string name="owner_restau" translatable="true">Restaurateur</string>
    <string name="delivery_man" translatable="true">Livreur</string>
    <string name="select_option" translatable="true">Sélectionnez une option</string>
    <string name="customer_choice" translatable="true">En temps que client, vous pouvez commander vos plats préférés afin de vous les faire livrer à domicile</string>
    <string name="owner_choice" translatable="true">En temps que restaurateur, vous recevrez une notification pour vous signaler que votre restaurant vous a été attribué. Vous pourrez ensuite ajouter vos plats et les gérer</string>
    <string name="delivery_choice" translatable="true">En temps que livreur, vous pourrez recevoir des notifications pour vous signaler qu\'une commande est prête à être livrée, ainsi que l\'ensemble des informations nécessaires pour la livraison</string>

    <string name="reset_password" translatable="true"> Réinitialiser le mot de passe</string>
    <string name="enter_email" translatable="true">Entrez votre adresse email pour demander un nouveau mot de passe</string>
    <string name="validate" translatable="true">Valider</string>
    <string name="add_address" translatable="true">Ajouter une adresse</string>

    <string name="email_update_success" translatable="true">Votre adresse mail a été mise à jour avec succès</string>
    <string name="password_update_success" translatable="true">Votre mot de passe a été mis à jour avec succès</string>
    <string name="address_update_success" translatable="true">Votre adresse a été mise à jour avec succès</string>
    <string name="enter_valid_email" translatable="true">Veuillez entrer une adresse mail valide</string>

    <string name="change_email" translatable="true">Changer de mail</string>
    <string name="password_constraint" translatable="true">Votre mot de passe doit être long d\'au moins 6 caractères</string>
    <string name="new_password" translatable="true">Entrez votre nouveau mot de passe</string>
    <string name="previous_password" translatable="true">Entrez votre mot de passe actuel</string>
    <string name="confirm_new_password" translatable="true">Confirmez le nouveau mot de passe</string>

    <string name="next" translatable="true">Suivant</string>

    <string name="deliver_to" translatable="true">Livré à</string>
    <string name="address_example" translatable="true">Exemple : 10 rue de la paix, Paris</string>
    <string name="location" translatable="true">10 Adresse de livraison Sherbrooke</string>
    <string name="no_address" translatable="true">Aucune adresse enregistrée pour le moment</string>
    <string name="street_number_hint">N°</string>
    <string name="street_name_hint">Rue</string>
    <string name="postal_code_hint">Code postal</string>
    <string name="city_hint">Ville</string>

    <string name="home_title" translatable="true">Que souhaiteriez-vous commander ?</string>
    <string name="finder" translatable="true">Rechercher un plat ou un restaurant</string>
    <string name="category1" translatable="true">burger</string>
    <string name="featured_restaurant" translatable="true">Restaurant à la une</string>
    <string name="view_all" translatable="true">Voir Tous</string>
    <string name="popular_items" translatable="true">Les plats préférés</string>
    <string name="my_orders">Ma dernière commande</string>
    <string name="my_profile">Mon profil</string>
    <string name="delivery_address">Adresse de livraison</string>
    <string name="update_delivery_address">Mise à jour de l\'adresse de livraison</string>
    <string name="update_address">Mettre à jour l\'adresse</string>

    <string name="logout">Déconnexion</string>

    <string name="password_instructions">Cliquez sur le bouton ci-dessous pour réinitialiser votre mot de passe. Vous devez connaître votre mot de passe actuel pour pouvoir le changer.</string>
    <string name="home" translatable="true">Accueil</string>
    <string name="my_deliveries" translatable="true">Mes livraisons</string>
    <!--
    <string name="" translatable="true"></string>
    <string name="" translatable="true"></string>
    <string name="" translatable="true"></string>
    <string name="" translatable="true"></string>
    -->


</resources>