<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.login.LoginActivity">

    <LinearLayout
        android:id="@+id/layout_principal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layout_form_validation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="25dp"
            android:padding="15dp">

            <TextView
                android:id="@+id/textViewVerification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="27dp"
                android:layout_marginEnd="27dp"
                android:fontFamily="@font/sofiapro_semibold"
                android:text="@string/who_are_you"
                android:textColor="@color/black"
                android:textSize="37sp"
                android:textAlignment="center"/>

            <LinearLayout
                android:id="@+id/layout_verification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="10dp"
                android:padding="10dp">

                <TextView
                    android:id="@+id/textViewVerificationText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sofiapro_regular"
                    android:text="@string/who_are_you_text"
                    android:textColor="@color/grey"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <RadioGroup
                        android:id="@+id/radioGroup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RadioButton
                            android:id="@+id/radioButton1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/sofiapro_regular"
                            android:textColor="@color/grey"
                            android:textSize="16sp"
                            android:buttonTint="@color/orange"
                            android:padding="10dp"
                            android:text="@string/customer" />

                        <RadioButton
                            android:id="@+id/radioButton2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/sofiapro_regular"
                            android:textColor="@color/grey"
                            android:textSize="16sp"
                            android:buttonTint="@color/orange"
                            android:padding="10dp"
                            android:text="@string/owner_restau" />

                        <RadioButton
                            android:id="@+id/radioButton3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/sofiapro_regular"
                            android:textColor="@color/grey"
                            android:textSize="16sp"
                            android:buttonTint="@color/orange"
                            android:padding="10dp"
                            android:text="@string/delivery_man" />
                    </RadioGroup>

                    <!-- TextView qui affichera le texte dynamique -->
                    <TextView
                        android:id="@+id/textViewResult"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/select_option"
                        android:fontFamily="@font/sofiapro_regular"
                        android:textColor="@color/grey"
                        android:textSize="16sp"
                        android:layout_marginTop="20dp"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:background="@drawable/orange_rounded_button"
            android:fontFamily="@font/sofiapro_semibold"
            android:paddingStart="50dp"
            android:paddingEnd="50dp"
            android:text="@string/validate"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:textSize="15sp"/>
    </LinearLayout>
</ScrollView>