<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".activities.login.LoginActivity">

    <LinearLayout
        android:id="@+id/layout_principal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layout_back_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <ImageButton
                android:id="@+id/back_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/small_white_rounded_button"
                android:paddingVertical="10dp"
                android:scaleType="fitCenter"
                android:contentDescription="@string/back"
                android:src="@drawable/left_arrow" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_form_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:padding="15dp">

            <TextView
                android:id="@+id/textViewSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="27dp"
                android:layout_marginEnd="27dp"
                android:fontFamily="@font/sofiapro_semibold"
                android:text="@string/sign_in"
                android:textColor="@color/black"
                android:textSize="37sp"
                android:textAlignment="center"/>

            <LinearLayout
                android:id="@+id/layout_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="10dp"
                android:padding="10dp">

                <TextView
                    android:id="@+id/textViewEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sofiapro_regular"
                    android:text="@string/email"
                    android:textColor="@color/grey"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/editTextTextEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edit_text_background"
                    android:ems="10"
                    android:fontFamily="@font/sofiapro_regular"
                    android:hint="@string/email_example"
                    android:inputType="textEmailAddress"
                    android:paddingStart="25dp"
                    android:textColorHint="@color/grey_edit_text"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="RtlSymmetry" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_mdp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="10dp"
                android:padding="10dp">

                <TextView
                    android:id="@+id/textViewPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sofiapro_regular"
                    android:text="@string/password"
                    android:textColor="@color/grey"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/editTextTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edit_text_background"
                    android:ems="10"
                    android:fontFamily="@font/sofiapro_regular"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingStart="25dp"
                    android:textColorHint="@color/grey_edit_text"
                    tools:ignore="RtlSymmetry" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sofiapro_medium"
                android:text="@string/forgot_password"
                android:textColor="@color/orange"
                android:textSize="14sp"
                android:textAlignment="center"
                android:layout_marginTop="20dp"/>

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:background="@drawable/orange_rounded_button"
                android:fontFamily="@font/sofiapro_semibold"
                android:paddingStart="50dp"
                android:paddingEnd="50dp"
                android:text="@string/sign_in"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:layout_marginTop="25dp"
                android:layout_gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_text_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="20dp">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sofiapro_medium"
                android:paddingEnd="10dp"
                android:text="@string/no_account"
                android:textColor="@color/grey_text"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sofiapro_medium"
                android:text="@string/sign_up_underligned"
                android:textColor="@color/orange"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_login_fcb_google"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:padding="20dp">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingStart="60dp"
                android:paddingEnd="60dp">

                <View
                    android:layout_width="89dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="@color/grey_text" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/sofiapro_medium"
                    android:gravity="center"
                    android:paddingStart="0dp"
                    android:paddingEnd="0dp"
                    android:text="@string/sign_in_with"
                    android:textColor="@color/grey_text"
                    android:textSize="16sp" />

                <View
                    android:layout_width="89dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="@color/grey_text"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:padding="20dp">

                <LinearLayout
                    android:layout_width="140dp"
                    android:layout_height="54dp"
                    android:layout_weight="1"
                    android:background="@drawable/white_rounded_button"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginEnd="8dp"
                        android:src="@drawable/facebook_icon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sofiapro_medium"
                        android:text="@string/facebook"
                        android:textColor="@color/black"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="140dp"
                    android:layout_height="54dp"
                    android:layout_marginStart="35dp"
                    android:layout_weight="1"
                    android:background="@drawable/white_rounded_button"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="44dp"
                        android:layout_height="44dp"
                        android:src="@drawable/google_icon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sofiapro_medium"
                        android:text="@string/google"
                        android:textColor="@color/black"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>