<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:layout_gravity="center"
    tools:context=".activities.main.MainActivity">

    <LinearLayout
        android:id="@+id/layout_principal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layout_top_part"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="70dp"
            android:weightSum="1.0">

            <ImageView
                android:id="@+id/imageViewLogo"
                android:layout_width="233dp"
                android:layout_height="244dp"
                android:layout_gravity="center"
                android:contentDescription="@string/app_name"
                app:srcCompat="@drawable/full_logo"/>

            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sofiapro_bold"
                android:gravity="center"
                android:text="@string/welcome"
                android:textColor="@color/white"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/textViewDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sofiapro_regular"
                android:gravity="center"
                android:paddingStart="45dp"
                android:paddingEnd="45dp"
                android:text="@string/welcome_text"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_bottom_part"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="70dp">

            <LinearLayout
                android:id="@+id/layout_login_fcb_google"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:padding="20dp">

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingStart="60dp"
                    android:paddingEnd="60dp">

                    <View
                        android:layout_width="89dp"
                        android:layout_height="2dp"
                        android:layout_weight="1"
                        android:background="@color/white" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/sofiapro_medium"
                        android:gravity="center"
                        android:paddingStart="0dp"
                        android:paddingEnd="0dp"
                        android:text="@string/sign_in_with"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <View
                        android:layout_width="89dp"
                        android:layout_height="2dp"
                        android:layout_weight="1"
                        android:background="@color/white" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:orientation="horizontal"
                    android:padding="20dp">

                    <LinearLayout
                        android:layout_width="140dp"
                        android:layout_height="54dp"
                        android:layout_weight="1"
                        android:background="@drawable/white_rounded_button"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_marginEnd="8dp"
                            android:src="@drawable/facebook_icon"
                            android:contentDescription="@string/facebook"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/sofiapro_medium"
                            android:text="@string/facebook"
                            android:textColor="@color/black"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="140dp"
                        android:layout_height="54dp"
                        android:layout_marginStart="35dp"
                        android:layout_weight="1"
                        android:background="@drawable/white_rounded_button"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="44dp"
                            android:layout_height="44dp"
                            android:src="@drawable/google_icon"
                            android:contentDescription="@string/google"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/sofiapro_medium"
                            android:text="@string/google"
                            android:textColor="@color/black"
                            android:textSize="14sp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="50dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/white_fade_rounded_button"
                    android:fontFamily="@font/sofiapro_medium"
                    android:text="@string/start_email"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="17sp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="6dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/sofiapro_regular"
                        android:gravity="right"
                        android:text="@string/already_account"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/button_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/sofiapro_regular"
                        android:text="@string/sign_in_underligned"
                        android:textColor="@color/white"
                        android:textSize="16sp"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>